--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,5 +9,7 @@ services:
     command: poetry run python manage.py runserver 0.0.0.0:8000
     env_file:
       - .env
+    volumes:
+        - ./backend:/home/app/backend
     ports:
       - 8000:8000
