--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,6 +10,9 @@ python = "^3.11"
 django = "^4.2.5"
 django-model-utils = "^4.3.1"
 pillow = "^10.0.1"
+djangorestframework = "^3.14.0"
+markdown = "^3.4.4"
+django-filter = "^23.3"
 
 
 [build-system]
