--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,6 +13,8 @@ pillow = "^10.0.1"
 djangorestframework = "^3.14.0"
 markdown = "^3.4.4"
 django-filter = "^23.3"
+drf-spectacular = "^0.26.5"
+drf-spectacular-sidecar = "^2023.10.1"
 
 
 [build-system]
