--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -15,6 +15,8 @@ markdown = "^3.4.4"
 django-filter = "^23.3"
 drf-spectacular = "^0.26.5"
 drf-spectacular-sidecar = "^2023.10.1"
+djoser = "^2.2.0"
+djangorestframework-simplejwt = "^5.3.0"
 
 
 [build-system]
