--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     env_file:
       - ./.env
 
-  portal_redis:
+  redis:
     image: redis:6.2-alpine
     container_name: redis
     restart: always
@@ -28,7 +28,7 @@ services:
     ports:
       - 5672:5672
 
-  celeryworker:
+  celery_worker:
     container_name: celeryworker
     build:
       context: backend/
@@ -39,9 +39,9 @@ services:
       - ./.env
     depends_on:
       - rabbitmq
-    command: celery -A backend worker -l info --pool=prefork
+    command: poetry run celery -A backend worker -l info --pool=prefork
 
-  celeryscheduler:
+  celery_beat:
     container_name: celeryscheduler
     build:
       context: backend/
@@ -52,7 +52,7 @@ services:
       - ./.env
     depends_on:
       - rabbitmq
-    command: celery -A backend beat -l info
+    command: poetry run celery -A backend beat -l info
 
 
   flower:
@@ -77,6 +77,11 @@ services:
       - ./backend:/home/app/backend
     ports:
       - 8000:8000
+    depends_on:
+      - postgres
+      - redis
+      - rabbitmq
+      
     command: poetry run python manage.py runserver 0.0.0.0:8000
 
   frontend:
