--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -18,6 +18,7 @@ drf-spectacular-sidecar = "^2023.10.1"
 djoser = "^2.2.0"
 djangorestframework-simplejwt = "^5.3.0"
 django-cors-headers = "^4.2.0"
+gunicorn = "^21.2.0"
 
 
 [build-system]
