--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,6 +1,3 @@
-name: CI
-on: [push]
-
 jobs:
   ci:
     runs-on: ubuntu-latest
@@ -8,9 +5,17 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install Python
         uses: actions/setup-python@v4
+        # see details (matrix, python-version, python-version-file, etc.)
+        # https://github.com/actions/setup-python
       - name: Install poetry
         uses: abatilo/actions-poetry@v2
+      - uses: actions/cache@v3
+        name: Define a cache for the virtual environment based on the dependencies lock file
+        with:
+          path: ./.venv
+          key: venv-${{ hashFiles('poetry.lock') }}
       - name: Install the project dependencies
-        run: poetry install
+        run: cd backend && poetry install
       - name: Run the automated tests (for example)
         run: poetry run python manage.py test
+
