--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,8 +1,16 @@
-name: CI
-on: [pull_request]
+name: Run tests
+
+on:
+  pull_request:
+    types:
+      - opened
+      - edited
+      - synchronize
+      - reopened
+  workflow_call:
 
 jobs:
-  ci:
+  Testing:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -10,8 +18,6 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.11"
-        # see details (matrix, python-version, python-version-file, etc.)
-        # https://github.com/actions/setup-python
       - name: Install poetry
         uses: abatilo/actions-poetry@v2
       - uses: actions/cache@v3
