--- a/.github/workflows/deploy-poductions.yml
+++ b/.github/workflows/deploy-poductions.yml
@@ -1,20 +1,24 @@
-# name: Deploy to production
-# on:
-#   pull_request:
-#     branches:
-#       - main
+name: Deploy to productions
+on:
+  push:
+    branches:
+      - staging
 
-# jobs:
-
-#   build:
-#     name: Build
-#     runs-on: ubuntu-latest
-#     steps:
-#     - name: executing remote ssh commands using password
-#       uses: appleboy/ssh-action@v1.0.0
-#       with:
-#         host: ${{ secrets.HOST }}
-#         username: ${{ secrets.USERNAME }}
-#         password: ${{ secrets.PASSWORD }}
-#         port: ${{ secrets.PORT }}
-#         script: whoami
+jobs:
+  build:
+    name: Build
+    runs-on: ubuntu-latest
+    steps:
+    - name: executing remote ssh commands using password
+      uses: appleboy/ssh-action@v1.0.0
+      with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USERNAME }}
+        password: ${{ secrets.PASSWORD }}
+        port: ${{ secrets.PORT }}
+        script: |
+          cd backend
+          poetry install
+          poetry run python manage.py migrate
+          poetry run python manage.py collectstatic --no-input
+          poetry run gunicorn core.wsgi:application --bind 0.0.0.0:8000 
