--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -2,7 +2,7 @@ name: Deploy to staging
 on:
   push:
     branches:
-      - main
+      - staging
 
 jobs:
   build:
@@ -12,13 +12,23 @@ jobs:
     - name: executing remote ssh commands using password
       uses: appleboy/ssh-action@v1.0.0
       with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USERNAME }}
-        password: ${{ secrets.PASSWORD }}
-        port: ${{ secrets.PORT }}
+        host: ${{ secrets.SSH_STAGING_HOST }}
+        username: ${{ secrets.SSH_STAGING_USERNAME }}
+        password: ${{ secrets.SSH_STAGING_PASSWORD }}
         script: |
-          cd backend
-          poetry install
-          poetry run python manage.py migrate
-          poetry run python manage.py collectstatic --no-input
-          poetry run gunicorn core.wsgi:application --bind 0.0.0.0:8000 
+          cd shop
+          git pull origin staging
+          docker-compose -f docker-compose.prod.yml up -d --build
+          docker system prune -f
+
+  # Send_notification:
+  #   name: Send telegram notification
+  #   runs-on: ubuntu-latest
+  #   needs: [Deploy]
+  #   steps:
+  #     - name: Send message
+  #       uses: appleboy/telegram-action@master
+  #       with:
+  #         to: ${{ secrets.TELEGRAM_TO }}
+  #         token: ${{ secrets.TELEGRAM_TOKEN }}
+  #         message: ${{ github.workflow }} done!
