--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -12,9 +12,9 @@ jobs:
     - name: executing remote ssh commands using password
       uses: appleboy/ssh-action@v1.0.0
       with:
-        host: ${{ secrets.SSH_STAGING_HOST }}
-        username: ${{ secrets.SSH_STAGING_USERNAME }}
-        password: ${{ secrets.SSH_STAGING_PASSWORD }}
+        host: ${{ secrets.STAGING_SSH_HOST }}
+        username: ${{ secrets.STAGING_SSH_USERNAME }}
+        password: ${{ secrets.STAGING_SSH_PASSWORD }}
         script: |
           cd shop
           git pull origin staging
