--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -18,6 +18,7 @@ jobs:
         script: |
           cd {{ github.workspace }}
           git pull origin staging
+          git checkout staging
           docker-compose -f docker-compose.prod.yml up -d --build
           docker system prune -f
 
