--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -16,9 +16,8 @@ jobs:
         username: ${{ secrets.STAGING_SSH_USERNAME }}
         password: ${{ secrets.STAGING_SSH_PASSWORD }}
         script: |
-          cd {{ github.workspace }}
-          git pull origin staging
-          git checkout staging
+          cd ${{ github.workspace }}
+          git pull origin staging && git checkout staging
           docker-compose -f docker-compose.prod.yml up -d --build
           docker system prune -f
 
