--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -18,7 +18,7 @@ jobs:
         script: |
           cd /home/Shop/
           git pull origin staging && git checkout staging
-          docker-compose -f docker-compose.prod.yml up -d --build
+          docker-compose -f docker-compose.prod.yml up --build -d --remove-orphans
           docker system prune -f
 
   # Send_notification:
