--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -20,12 +20,19 @@ http {
         listen 80 default_server;
         listen [::]:80;
 
-        location / {
-            proxy_pass http://backend;
+        location /admin {
+            proxy_pass http://backend/admin;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header Host $host;
             proxy_redirect off;
         }
+
+        # location / {
+        #     proxy_pass http://frontend;
+        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        #     proxy_set_header Host $host;
+        #     proxy_redirect off;
+        # }
 
         # location / {
         #     return 301 https://$host$request_uri;
