--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -27,6 +27,13 @@ http {
             proxy_redirect off;
         }
 
+        location /api {
+            proxy_pass http://backend/api;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Host $host;
+            proxy_redirect off;
+        }
+
         # location / {
         #     proxy_pass http://frontend;
         #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
