--- a/.github/workflows/deploy-poductions.yml
+++ b/.github/workflows/deploy-poductions.yml
@@ -12,13 +12,11 @@ jobs:
     - name: executing remote ssh commands using password
       uses: appleboy/ssh-action@v1.0.0
       with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USERNAME }}
-        password: ${{ secrets.PASSWORD }}
-        port: ${{ secrets.PORT }}
+        host: ${{ secrets.PRODUCTION_SSH_HOST }}
+        username: ${{ secrets.PRODUCTION_SSH_USERNAME }}
+        password: ${{ secrets.PRODUCTION_SSH_PASSWORD }}
         script: |
-          cd backend
-          poetry install
-          poetry run python manage.py migrate
-          poetry run python manage.py collectstatic --no-input
-          poetry run gunicorn core.wsgi:application --bind 0.0.0.0:8000 
+          cd /home/Shop/
+          git pull origin main && git checkout main
+          docker-compose -f docker-compose.prod.yml up --build -d --remove-orphans
+          docker system prune -f
