--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -78,6 +78,10 @@ services:
       - 8000:8000
     entrypoint: poetry run bash entrypoint.sh
     command: poetry run python manage.py runserver 0.0.0.0:8000
+    # depends_on:
+    #   postgres:
+    #     condition: service_healthy
+
 
   frontend:
     container_name: frontend
