--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -19,6 +19,8 @@ djoser = "^2.2.0"
 djangorestframework-simplejwt = "^5.3.0"
 django-cors-headers = "^4.2.0"
 gunicorn = "^21.2.0"
+django-redis = "^5.4.0"
+redis = "^5.0.1"
 
 
 [build-system]
