--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     image: redis:6.2-alpine
     container_name: redis
     env_file:
-      - ./.env
+      - .env
     volumes:
       - ./data/redis:/data
     restart: always
